# SocChina_2025_Bouffalo

./: README.md  alibaba.c  lv_conf.h  test.py
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/: CMakeLists.txt  FreeRTOSConfig.h  README.md  lcd_conf_user.h  lwipopts_user.h  main.c  mbedtls_sample_config.h  proj.conf  touch_conf_user.h
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/GY906/: gy906.c  gy906.h
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/MAX30102/: max30102.c  max30102.h
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/SI7021/: si7021.c  si7021.h
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/es8388/: fhm_onechannel_16k_20.h
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/kws/: tm_model.c
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/lcd/: README.md  lcd.c  lcd.h  lcd_conf.h
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/mqtt/: wifi_mqtt.c
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/sev_btble/: ble_tp_svc.c
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/tinymaix/: mnist_valid_q.h  tm_layers.c  tm_port.h
our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/touch/: gt911_i2c.c  gt911_i2c.h
(+6 files in other folders)
